Fixed the bug of how the product pictures slide in shop.html when using firefox, adjusted footer logo alignment for mobile devices, adjusted brandname font size, changed color of signup button, cleanded css code that had no affect, Fix firefox bg display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,6 @@ html {
 /* ------ Header ------ */
 
 .header-background {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   height: auto;
   min-height: 650px;
@@ -22,8 +19,6 @@ html {
   padding-bottom: 70px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
   flex-direction: column;
   background-color: #fff;
   background-image: url(../images/home-page/red-bg-coffee-rs.jpg);
@@ -31,8 +26,6 @@ html {
   background-position: top center;
   background-size: cover;
   background-attachment: fixed;
-  -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
   transform: rotate(0deg);
   color: #000;
   text-decoration: none;
@@ -66,7 +59,8 @@ html {
 }
 
 .navbar-brand {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
+  font-weight: 500;
 }
 
 .navbar-light .navbar-brand {
@@ -116,22 +110,11 @@ html {
 }
 
 .flex-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
   flex: 1;
 }
 
@@ -371,7 +354,8 @@ footer {
 }
 
 #page-2 .navbar-light .navbar-brand {
-  font-size: 25px;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 #page-2 .col-lg-8 {
@@ -436,12 +420,14 @@ footer {
 
 .btn-sign-up {
   margin: 0;
+  color: rgba(230, 5, 5, 0.85);
+  border-color: rgba(230, 5, 5, 0.85);
+  font-weight: 600;
 }
 
-#page-2 .btn-outline-light:hover {
-  color: rgba(230, 5, 5, 0.85);
-  background-color: #f8f9fa;
-  border-color: rgba(230, 5, 5, 0.85);
+#page-2 .btn-sign-up:hover {
+  font-weight: 800;
+  border-width: 2px;
 }
 
 /* ------ Media query ------ */
@@ -568,7 +554,7 @@ footer {
   }
 
   .btn {
-    margin-right: 125px;
+    margin-right: 55%;
     margin-top: 70px;
   }
 
@@ -640,7 +626,7 @@ footer {
 
   .container-fluid img {
     margin-top: 0;
-    margin-left: 22.5%;
+    margin-left: 21.5%;
     margin-bottom: 20px;
     max-width: 50%;
   }
